pms/catkin_ws/catkin_make.output
WARNING: Package name "randomNum_node" does not follow the naming conventions. It should start with a lower case letter and only contain lower case letters, digits and underscores.
[  1%] Built target listener
[  3%] [  4%] Built target talker
[  5%] [  7%] [  7%] Built target randomNumListner
Built target rosocvListner
Built target rosocvTalker
[  9%] Built target sensor_msgs_generate_messages_py
Built target randomNumTalker
[ 10%] Built target TBK
[ 10%] Built target sensor_msgs_generate_messages_cpp
[ 10%] Built target sensor_msgs_generate_messages_lisp
Scanning dependencies of target sample
[ 11%] Building CXX object a3_help/CMakeFiles/sample.dir/src/sample.cpp.o
[ 12%] [ 15%] [ 15%] Built target map_to_image_node
[ 16%] Built target random_walk
[ 17%] Built target std_msgs_generate_messages_cpp
Built target image_subscriber
Built target image_publisher
[ 17%] Built target _a3_help_generate_messages_check_deps_RequestGoal
[ 17%] [ 17%] Built target std_msgs_generate_messages_py
[ 18%] [ 18%] Built target geometry_msgs_generate_messages_py
Built target std_msgs_generate_messages_lisp
Built target node_example_gencfg
[ 18%] Built target _node_example_generate_messages_check_deps_NodeExampleData
[ 18%] Built target _lama_msgs_generate_messages_check_deps_PlaceProfile
[ 18%] Built target _lama_msgs_generate_messages_check_deps_GetLamaObject
[ 18%] [ 18%] Built target _lama_msgs_generate_messages_check_deps_InterfaceInfo
Built target _lama_msgs_generate_messages_check_deps_GetPlaceProfile
[ 18%] [ 18%] Built target _lama_msgs_generate_messages_check_deps_Crossing
Built target _lama_msgs_generate_messages_check_deps_LamaObject
[ 18%] Built target _lama_msgs_generate_messages_check_deps_Frontier
[ 18%] Built target geometry_msgs_generate_messages_cpp
[ 18%] Built target _lama_msgs_generate_messages_check_deps_SetLamaObject
[ 18%] [ 18%] Built target _lama_msgs_generate_messages_check_deps_DescriptorLink
Built target geometry_msgs_generate_messages_lisp
[ 18%] Built target _lama_msgs_generate_messages_check_deps_SetCrossing
[ 18%] [ 18%] Built target _lama_msgs_generate_messages_check_deps_SetPlaceProfile
Built target _lama_msgs_generate_messages_check_deps_GetInterfaceInfo
[ 21%] [ 22%] Built target a3_help_generate_messages_cpp
Built target a3_help_generate_messages_py
[ 22%] Built target _lama_msgs_generate_messages_check_deps_GetCrossing
[ 23%] [ 24%] Built target a3_help_generate_messages_lisp
Built target node_example_generate_messages_cpp
[ 27%] [ 27%] Built target _local_map_generate_messages_check_deps_SaveMap
[ 27%] [ 28%] Built target _voice_node_generate_messages_check_deps_voice_node
Built target node_example_generate_messages_py
Built target node_example_generate_messages_lisp
[ 43%] [ 61%] Built target lama_msgs_generate_messages_lisp
Built target lama_msgs_generate_messages_py
[ 61%] Built target a3_help_generate_messages
[ 76%] Built target lama_msgs_generate_messages_cpp
[ 78%] [ 82%] [ 82%] Built target listener.node_example
Built target local_map_generate_messages_cpp
Built target talker.node_example
[ 83%] Built target local_map_generate_messages_lisp
[ 85%] [ 85%] [ 88%] Built target node_example_generate_messages
Built target local_map_generate_messages_py
[ 89%] Built target voice_node_generate_messages_py
[ 90%] Built target voice_node_generate_messages_cpp
Built target voice_node_generate_messages_lisp
[ 90%] Built target lama_msgs_generate_messages
[ 90%] [ 91%] Built target voice_node_generate_messages
[ 91%] Built target map_ray_caster
Built target local_map_generate_messages
[ 94%] Built target simplePub
[ 96%] Built target simpleSub
[ 98%] Built target local_map
/lu1/smagri/uni/subj/proj30cp/catkin_ws/src/a3_help/src/sample.cpp: In member function ‘void GazeboRetrieve::seperateThread()’:
/lu1/smagri/uni/subj/proj30cp/catkin_ws/src/a3_help/src/sample.cpp:1260:4: error: ‘vector’ was not declared in this scope
    vector<double> xWaypoint = {1.0, 2.0, 3.0, 4.0, 5.0};
    ^
/lu1/smagri/uni/subj/proj30cp/catkin_ws/src/a3_help/src/sample.cpp:1260:4: note: suggested alternatives:
In file included from /usr/include/c++/4.8/vector:64:0,
                 from /lu1/smagri/uni/subj/proj30cp/catkin_ws/src/a3_help/src/sample.cpp:5:
/usr/include/c++/4.8/bits/stl_vector.h:210:11: note:   ‘std::vector’
     class vector : protected _Vector_base<_Tp, _Alloc>
           ^
In file included from /usr/include/boost/mpl/aux_/include_preprocessed.hpp:37:0,
                 from /usr/include/boost/mpl/vector.hpp:46,
                 from /usr/include/boost/math/policies/policy.hpp:14,
                 from /usr/include/boost/math/policies/error_handling.hpp:19,
                 from /usr/include/boost/math/special_functions/round.hpp:14,
                 from /opt/ros/indigo/include/ros/time.h:58,
                 from /opt/ros/indigo/include/ros/ros.h:38,
                 from /lu1/smagri/uni/subj/proj30cp/catkin_ws/src/a3_help/src/sample.cpp:13:
/usr/include/boost/mpl/aux_/preprocessed/gcc/vector.hpp:22:8: note:   ‘boost::mpl::vector’
 struct vector;
        ^
In file included from /usr/include/boost/lexical_cast.hpp:170:0,
                 from /opt/ros/indigo/include/ros/transport_hints.h:34,
                 from /opt/ros/indigo/include/ros/subscribe_options.h:33,
                 from /opt/ros/indigo/include/ros/node_handle.h:41,
                 from /opt/ros/indigo/include/ros/ros.h:45,
                 from /lu1/smagri/uni/subj/proj30cp/catkin_ws/src/a3_help/src/sample.cpp:13:
/usr/include/boost/container/container_fwd.hpp:53:7: note:   ‘boost::container::vector’
 class vector;
       ^
In file included from /usr/include/c++/4.8/vector:64:0,
                 from /lu1/smagri/uni/subj/proj30cp/catkin_ws/src/a3_help/src/sample.cpp:5:
/usr/include/c++/4.8/bits/stl_vector.h:210:11: note:   ‘std::vector’
     class vector : protected _Vector_base<_Tp, _Alloc>
           ^
/lu1/smagri/uni/subj/proj30cp/catkin_ws/src/a3_help/src/sample.cpp:1260:11: error: expected primary-expression before ‘double’
    vector<double> xWaypoint = {1.0, 2.0, 3.0, 4.0, 5.0};
           ^
/lu1/smagri/uni/subj/proj30cp/catkin_ws/src/a3_help/src/sample.cpp:1260:11: error: expected ‘;’ before ‘double’
/lu1/smagri/uni/subj/proj30cp/catkin_ws/src/a3_help/src/sample.cpp:1261:11: error: expected primary-expression before ‘double’
    vector<double> yWaypoint = {1.0, 2.0, 3.0, 4.0, 5.0};
           ^
/lu1/smagri/uni/subj/proj30cp/catkin_ws/src/a3_help/src/sample.cpp:1261:11: error: expected ‘;’ before ‘double’
/lu1/smagri/uni/subj/proj30cp/catkin_ws/src/a3_help/src/sample.cpp:1278:20: error: ‘xWaypoint’ was not declared in this scope
    for (int i=0; i<xWaypoint.size(); i++){
                    ^
/lu1/smagri/uni/subj/proj30cp/catkin_ws/src/a3_help/src/sample.cpp:1280:39: error: ‘yWaypoint’ was not declared in this scope
            cv::Point(xWaypoint.at(i), yWaypoint.at(i)),
                                       ^
make[2]: *** [a3_help/CMakeFiles/sample.dir/src/sample.cpp.o] Error 1
make[1]: *** [a3_help/CMakeFiles/sample.dir/all] Error 2
make: *** [all] Error 2
Base path: /lu1/smagri/uni/subj/proj30cp/catkin_ws
Source space: /lu1/smagri/uni/subj/proj30cp/catkin_ws/src
Build space: /lu1/smagri/uni/subj/proj30cp/catkin_ws/build
Devel space: /lu1/smagri/uni/subj/proj30cp/catkin_ws/devel
Install space: /lu1/smagri/uni/subj/proj30cp/catkin_ws/install
####
#### Running command: "make cmake_check_build_system" in "/lu1/smagri/uni/subj/proj30cp/catkin_ws/build"
####
####
#### Running command: "make -j8 -l8" in "/lu1/smagri/uni/subj/proj30cp/catkin_ws/build"
####
Invoking "make -j8 -l8" failed
